data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1156.wast
;; 7. **Test Description**:    - Construct a `loop` where `br_table` uses dynamic index computation that results in a value outside the range of target labels.    - **Constraint**: Tests dynamic resolution of branch indices.    - **Edge Case**: Checks robustness against dynamically out-of-bound indices.

(assert_invalid
  (module
    (func
      (loop (result i32)
        (i32.const 0)
        (i32.const 1)
        (i32.add)
        (br_table 0 1 2)
      )
    )
  )
  "type mismatch"
)